--- a/ALTsite/indexalt.html
+++ b/ALTsite/indexalt.html
@@ -63,61 +63,11 @@
     <div class="p-4 mt-4" id="target"></div>
 
 
-<-- orig template -->
-    <template id="temp2">
-        <div class="border border-light mb-5 text-light p-3 temp-card">
-            <div class="row text-center text-center">
-                <div class="col-5">
-                    <h3 class="name"></h3>
-                </div>
-                <div class="col-2 photo-wrap">
-                    <img class="photos grow" src="" alt="">
-                </div>
-                <div class="col-5">
-                    <div class="rating"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="location"></div>
-                </div>
-                <div class="col">
-                    <div class="phone"></div>
-                </div>
-            </div>
-            <div class="row mt-3 text-center">
-                <div class="col">
-                    <p class="timings my-auto"></p>
-                </div>
-            </div>
-            <div class="row mt-1 mx-auto">
-                <div class="col-4 p-2">
-                    <div class="coins mx-auto">
-                        <div class="coin1 ml-auto"></div>
-                        <div class="coin2"></div>
-                        <div class="coin3"></div>
-                        <div class="coin4 mr-auto"></div>
-                    </div>
-                </div>
-                <div class="col-4 p-2">
-                    <div class="delivers text-center"></div>
-                </div>
-                <div class="col-4">
-                    <div class="tags p-2">
-                        <p class="tagsPar"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </template>
 
+</main>
 
-
-
-
-
-    <-- alt template -->
-    <template id="temp">
+<!-- alt template -->
+<template id="temp">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
             <h4 class="my-0 font-weight-normal name">Free</h4>
@@ -141,124 +91,55 @@
             </div>
         </div>
     </div>
-    </template>
+</template>
 
-
-
-
-
-
-
-
-
-    <div class="container">
-        <div class="card-deck mb-3 text-center">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Free</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                </div>
+<!-- orig template -->
+<template id="OGTemp">
+    <div class="border border-light mb-5 text-light p-3 temp-card">
+        <div class="row text-center text-center">
+            <div class="col-5">
+                <h3 class="name"></h3>
             </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Pro</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                </div>
+            <div class="col-2 photo-wrap">
+                <img class="photos grow" src="" alt="">
             </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Enterprise</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                </div>
+            <div class="col-5">
+                <div class="rating"></div>
             </div>
         </div>
-        <div class="card-deck mb-3 text-center">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Free</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+        <div class="row">
+            <div class="col">
+                <div class="location"></div>
+            </div>
+            <div class="col">
+                <div class="phone"></div>
+            </div>
+        </div>
+        <div class="row mt-3 text-center">
+            <div class="col">
+                <p class="timings my-auto"></p>
+            </div>
+        </div>
+        <div class="row mt-1 mx-auto">
+            <div class="col-4 p-2">
+                <div class="coins mx-auto">
+                    <div class="coin1 ml-auto"></div>
+                    <div class="coin2"></div>
+                    <div class="coin3"></div>
+                    <div class="coin4 mr-auto"></div>
                 </div>
             </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Pro</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-                </div>
+            <div class="col-4 p-2">
+                <div class="delivers text-center"></div>
             </div>
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Enterprise</h4>
-                </div>
-                <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+            <div class="col-4">
+                <div class="tags p-2">
+                    <p class="tagsPar"></p>
                 </div>
             </div>
         </div>
     </div>
-</main>
-
-
-
-
-
-
-
-
-
-
-
+</template>
 
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
