--- a/ALTsite/indexalt.html
+++ b/ALTsite/indexalt.html
@@ -64,7 +64,7 @@
     <div class="p-4 mt-4" ></div>
 
 
-<-- orig template -->
+<!-- orig template -->
     <template id="temp2">
         <div class="border border-light mb-5 text-light p-3 temp-card">
             <div class="row text-center text-center">
@@ -117,7 +117,7 @@
 
 
 
-    <-- alt template -->
+    <!-- alt template -->
     <template id="temp">
     <div class="card mb-4 mt-4 box-shadow">
         <div class="card-header text-center">
