--- a/ALTsite/indexalt.html
+++ b/ALTsite/indexalt.html
@@ -51,7 +51,7 @@
                             <button type="button" class="btn btn-danger wrn-btn" id="run">Search</button>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-12 p-0">
-                            <button type="button" class="btn btn-warning wrn-btn rounded-right" id="find">Find me!</button>
+                            <button type="button" class="btn btn-warning wrn-btn rounded-right" id="geo">Find me!</button>
                         </div>
                     </div>
                 </div>
