--- a/ALTsite/indexalt.html
+++ b/ALTsite/indexalt.html
@@ -59,14 +59,14 @@
         </div>
     </section>
     <h2 id="targetText" class="text-white mt-2 text-center"></h2>
-    <div class="p-4 mt-4" id="target"></div>
+    <div class="p-4 mt-4 card-deck" id="target"></div>
 </main>
 
 <!-- alt template -->
 <template id="temp">
     <div class="card mb-4 box-shadow">
         <div class="card-header">
-            <h4 class="my-0 font-weight-normal name">Free</h4>
+            <h4 class="my-0 font-weight-normal name text-center">Free</h4>
         </div>
         <img class="card-img-top photos grow" src="..." alt="Card image cap">
         <div class="card-body">
@@ -76,7 +76,7 @@
                 <li class="timings">2 GB of storage</li>
                 <li class="location">2 GB of storage</li>
                 <li class="delivers text-center">Email support</li>
-                <li class="tags">Help center access</li>
+                <li class="tagsPar">Help center access</li>
             </ul>
 
             <div class="coins mx-auto">
