--- a/infoPage.html
+++ b/infoPage.html
@@ -81,13 +81,13 @@
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
                     <h2>FoodieFinder</h2>
-                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best
-                        restaurants
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
                         or cafes from your location. </p>
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
                             class="fa fa-linkedin-square"></i></a></p>
                 </div>
                 <div class="col-lg-3 col-xs-12 links">
+
                 </div>
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
