--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow text-white">
         <h5 class="my-0 mr-md-auto font-weight-normal">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-white" href="#">Home</a>
-            <a class="p-2 text-white" href="#">About Us</a>
-            <a class="p-2 text-white" href="#">Contact Us</a>
+            <a class="p-2 text-white" href="index.html">Home</a>
+            <a class="p-2 text-white" href="infoPage.html">About Us</a>
+            <a class="p-2 text-white" href="contactPage.html">Contact Us</a>
         </nav>
     </div>
     <section class="search-sec">
@@ -35,14 +35,14 @@
 
                             <div class="col-lg-4 col-md-3 col-sm-12 p-0">
                                 <select class="form-control search-slt" id="select">
-                                    <option value="275">Pizzeria</option>
-                                    <option value="101">Diner</option>
-                                    <option value="271">Sandwich Shop</option>
-                                    <option value="18">Fine Dining</option>
                                     <option value="16">Casual Dining</option>
-                                    <option value="281">Fast Food</option>
+                                    <option value="18">Fine Dining</option>
                                     <option value="91">Bistro</option>
                                     <option value="1">Café</option>
+                                    <option value="101">Diner</option>
+                                    <option value="271">Sandwich Shop</option>
+                                    <option value="275">Pizzeria</option>
+                                    <option value="281">Fast Food</option>
                                 </select>
                             </div>
                             <div class="col-lg-2 col-md-3 col-sm-12 p-0">
@@ -64,11 +64,11 @@
 
 <!-- alt template -->
 <template id="temp">
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow grow">
         <div class="card-header">
             <h4 class="my-0 font-weight-normal name text-center">Free</h4>
         </div>
-        <img class="card-img-top photos grow" src="..." alt="Card image cap">
+        <img class="card-img-top photos" src="..." alt="Card image cap">
         <div class="card-body">
             <h1 class="card-title pricing-card-title rating">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
