added more final styling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h5 class="my-0 mr-md-auto font-weight-normal">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="index.html">Home</a>
-            <a class="p-2 text-white" href="infoPage.html">About Us</a>
-            <a class="p-2 text-white" href="contactPage.html">Contact Us</a>
+            <a class="p-2 text-white" href="infoPage.html">Info</a>
+            <a class="p-2 text-white" href="contactPage.html">Contact</a>
         </nav>
     </div>
     <section class="search-sec">
@@ -59,7 +59,11 @@
         </div>
     </section>
     <h2 id="targetText" class="text-white mt-2 text-center"></h2>
-    <div class="p-4 mt-4 card-deck mx-5" id="target"></div>
+    <div class="p-4 mt-4 card-deck mx-5" id="target">
+        <div class="wrapper justify-content-center">
+            <img src="src/countries.png" alt="countries" class="rounded">
+        </div>
+    </div>
 </main>
 
 <!-- alt template -->
@@ -70,13 +74,13 @@
         </div>
         <img class="card-img-top photos" src="..." alt="Card image cap">
         <div class="card-body">
-            <h1 class="card-title pricing-card-title rating">$0 <small class="text-muted">/ mo</small></h1>
+            <h1 class="card-title pricing-card-title rating text-center">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-                <li class="phone">10 users included</li>
-                <li class="timings">2 GB of storage</li>
-                <li class="location">2 GB of storage</li>
+                <li class="phone text-center">10 users included</li>
+                <li class="timings text-center">2 GB of storage</li>
+                <li class="location text-center">2 GB of storage</li>
                 <li class="delivers text-center">Email support</li>
-                <li class="tagsPar">Help center access</li>
+                <li class="tagsPar text-center">Help center access</li>
             </ul>
 
             <div class="coins mx-auto">
