--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href=assets/css/style.css>
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <title>FoodieFinder</title>
 </head>
 
@@ -15,7 +16,7 @@
 <body>
 <main id="logoBG">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow text-white">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Foodie Finder</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal logoName">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="#">Home</a>
             <a class="p-2 text-white" href="#">About Us</a>
@@ -59,12 +60,12 @@
         </div>
     </section>
     <h2 id="targetText" class="text-white mt-2 text-center"></h2>
-    <div class="p-4 mt-4 card-deck mx-5" id="target"></div>
+    <div class="p-4 mt-4 card-deck mx-5 rounded" id="target"></div>
 </main>
 
 <!-- alt template -->
 <template id="temp">
-    <div class="card mb-4 box-shadow">
+    <div class="card mb-4 box-shadow text-center">
         <div class="card-header">
             <h4 class="my-0 font-weight-normal name text-center">Free</h4>
         </div>
@@ -136,6 +137,45 @@
         </div>
     </div>
 </template>
+
+
+
+<footer class="page-footer text-white">
+    <div class="pt-4 footer margin" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xs-12 about-company">
+                    <h2>FoodieFinder</h2>
+                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best
+                        restaurants
+                        or cafes from your location. </p>
+                    <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
+                            class="fa fa-linkedin-square"></i></a></p>
+                </div>
+                <div class="col-lg-3 col-xs-12 links">
+
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+                    <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                    <p> Tolhuis, Sint-Pietersvliet 7, 2000 Antwerpen</p>
+                    <p class="mb-0">
+                        <i class="fa fa-phone mr-3"></i>0487 44 80 49</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>foodiefinds19@gmail.com</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col copyright">
+                    <p><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+
+
 
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
