--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
     <h2 id="targetText" class="text-white mt-2 text-center"></h2>
-    <div class="p-4 mt-4 card-deck mx-5 rounded" id="target">
+    <div class="p-4 mt-4 card-deck mx-5 rounded mb-3" id="target">
         <div class="wrapper justify-content-center">
             <img src="src/countries.png" alt="countries" class="rounded">
         </div>
