--- a/infoPage.html
+++ b/infoPage.html
@@ -19,14 +19,12 @@
 
 <header>
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 shadow-sm">
-        <h4 class="my-0 mr-md-auto font-weight-normal text-white">FoodieFinder</h4>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow text-white">
+        <h5 class="my-0 mr-md-auto font-weight-normal logoName">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-white" href="./index.html">Home</a>
+            <a class="p-2 text-white" href="index.html">Home</a>
             <a class="p-2 text-white" href="infoPage.html">Info</a>
-            <a class="p-2 text-white" href="./contactPage.html">Contact</a>
-
-
+            <a class="p-2 text-white" href="contactPage.html">Contact</a>
         </nav>
     </div>
 
