--- a/contactPage.html
+++ b/contactPage.html
@@ -11,17 +11,19 @@
     <link rel="stylesheet" type="text/css" href="assets/css/contactPage.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
 
 </head>
 <body>
 <header>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 shadow-sm">
-        <h4 class="my-0 mr-md-auto font-weight-normal text-white">FoodieFinder</h4>
+        <h4 class="my-0 mr-md-auto font-weight-normal logoName">Foodie Finder</h4>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-white" href="./index.html">Home</a>
+            <a class="p-2 text-white" href="index.html">Home</a>
             <a class="p-2 text-white" href="infoPage.html">Info</a>
-            <a class="p-2 text-white" href="./contactPage.html">Contact</a>
+            <a class="p-2 text-white" href="contactPage.html">Contact</a>
 
 
         </nav>
