--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body>
-<main id="logoBG">
+<header>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow text-white">
         <h5 class="my-0 mr-md-auto font-weight-normal logoName">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
@@ -26,6 +26,8 @@
             <a class="p-2 text-white" href="contactPage.html">Contact</a>
         </nav>
     </div>
+</header>
+<main id="logoBG">
     <section class="search-sec">
         <div class="container">
             <form action="#" method="post" novalidate="novalidate">
