--- a/infoPage.html
+++ b/infoPage.html
@@ -13,12 +13,12 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
-
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow text-white">
         <h5 class="my-0 mr-md-auto font-weight-normal logoName">Foodie Finder</h5>
         <nav class="my-2 my-md-0 mr-md-3">
