--- a/infoPage.html
+++ b/infoPage.html
@@ -21,6 +21,7 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 shadow-sm">
         <h4 class="my-0 mr-md-auto font-weight-normal text-white">FoodieFinder</h4>
+        <a class=" my-0 mr-md-auto navbar-brand"> <img id="logo" src="src/Icon.png" alt="logo"></a>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="./index.html">Home</a>
             <a class="p-2 text-white" href="infoPage.html">Info</a>
@@ -34,7 +35,7 @@
 
 
 <br>
-<div class="container bg-light " >
+<div class="container bg-light " id="conta" >
     <div class="row">
         <h1 class="title">About Us</h1>
     </div>
@@ -48,10 +49,10 @@
             <img  class="rounded-circle" src="src/group.jpeg"  alt="group" >
         </div>
         <div class="col">
-            <p class="font-weight-bold font-italic">FoodieFinder is a company specialized in finding a restaurant or
+            <p id="pp" class="font-weight-bold font-italic">FoodieFinder is a company specialized in finding a restaurant or
                 cafe
                 as close as possible using your geolocation or city.</p>
-            <p>The company has been created among 5 young people excited to create a
+            <p id="p">The company has been created among 5 young people excited to create a
                 website that helps anyone who has no idea how to find a perfect place
                 to enjoy food.In our company we know that continuing to innovate and make small changes is very
                 important so
