--- a/infoPage.html
+++ b/infoPage.html
@@ -42,14 +42,15 @@
     </div>
     <div class="row">
         <div class="col p-3">
-<!--            <img class="teamPic" src="src/group.jpeg" alt="group">-->
-            <img  class="rounded-circle" src="src/group.jpeg"  alt="group" >
+            <!--            <img class="teamPic" src="src/group.jpeg" alt="group">-->
+            <img class="rounded-circle" src="src/group.jpeg" alt="group">
         </div>
         <div class="col">
-            <p class="font-weight-bold font-italic">FoodieFinder is a company specialized in finding a restaurant or
+            <p id="pp" class="font-weight-bold font-italic">FoodieFinder is a company specialized in finding a
+                restaurant or
                 cafe
                 as close as possible using your geolocation or city.</p>
-            <p>The company has been created among 5 young people excited to create a
+            <p id="p">The company has been created among 5 young people excited to create a
                 website that helps anyone who has no idea how to find a perfect place
                 to enjoy food.In our company we know that continuing to innovate and make small changes is very
                 important so
@@ -61,6 +62,8 @@
                 reviews of all the restaurants with your tastes, that is our top priority.Why waste time searching or
                 asking
                 on the street if we give it to you on a tray? </p>
+            <p>It is only possible to find restaurants or cafes in 24 countries at this time, but we are working to be
+                active in all countries of the world.</p>
         </div>
     </div>
 
