--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2 id="targetText" class="text-white mt-2 text-center"></h2>
     <div class="px-2 pt-4 mt-4 card-deck rounded mb-3" id="target">
         <div class="wrapper justify-content-center">
-            <img src="src/countries.png" alt="countries" class="rounded">
+            <img src="src/countries.png" alt="countries" class="">
         </div>
     </div>
 </main>
