--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
         <div class="card-body">
             <h1 class="card-title pricing-card-title rating text-center">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-                <li class="phone text-center">10 users included</li>
-                <li class="timings text-center">2 GB of storage</li>
-                <li class="location text-center">2 GB of storage</li>
+                <li class="text-center"><strong>Telephone</strong></li>
+                <li class="phone text-center mb-1 ">10 users included</li>
+                <li class="text-center"><strong>Opening Hours</strong></li>
+                <li class="timings text-center mb-1">2 GB of storage</li>
+                <li class="text-center"><strong>Location</strong></li>
+                <li class="location text-center mb-1">2 GB of storage</li>
                 <li class="delivers text-center">Email support</li>
                 <li class="tagsPar text-center">Help center access</li>
             </ul>
