--- a/contactPage.html
+++ b/contactPage.html
@@ -60,7 +60,7 @@
 </main>
 <br>
 <footer class="page-footer text-white">
-    <div class="pt-4 footer margin" id="footer">
+    <div class="pt-4 footer" id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
