--- a/infoPage.html
+++ b/infoPage.html
@@ -40,11 +40,11 @@
             restaurant searches. </p>
     </div>
     <div class="row">
-        <div class="col p-3">
+        <div class="col-xl-6 col-sm-12 p-3">
             <!--            <img class="teamPic" src="src/group.jpeg" alt="group">-->
             <img class="rounded-circle" src="src/group.jpeg" alt="group">
         </div>
-        <div class="col">
+        <div class="col-xl-5 col-sm-12">
             <p id="pp" class="font-weight-bold font-italic">FoodieFinder is a company specialized in finding a
                 restaurant or
                 cafe
@@ -77,12 +77,13 @@
 
 
 <footer class="page-footer text-white">
-    <div class="pt-4 footer margin" id="footer">
+    <div class="pt-4 footer" id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 about-company">
                     <h2>FoodieFinder</h2>
-                    <p class="pr-5 text-white-50">FoodieFinder is a company specialized in finding the best restaurants
+                    <p class="pr-5 text-white">FoodieFinder is a company specialized in finding the best
+                        restaurants
                         or cafes from your location. </p>
                     <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
                             class="fa fa-linkedin-square"></i></a></p>
@@ -100,7 +101,7 @@
             </div>
             <div class="row">
                 <div class="col copyright">
-                    <p><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                    <p><small class="text-white">© 2019. All Rights Reserved.</small></p>
                 </div>
             </div>
         </div>
