--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         gtag('config', 'UA-148172371-1');
     </script>
-
+    <script src="https://use.fontawesome.com/cb8ec5d411.js"></script>
     <title>FoodieFinder</title>
 
 </head>
@@ -169,8 +169,9 @@
                     <p class="pr-5 text-white">FoodieFinder is a company specialized in finding the best
                         restaurants
                         or cafes from your location. </p>
-                    <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i
-                            class="fa fa-linkedin-square"></i></a></p>
+                    <p><a href="https://www.facebook.com"><i class="fa fa-facebook mr-3"></i>
+                    </a><a href="https://www.linkedin.com"><i class="fa fa-linkedin mr-3"></i></a>
+                        <a href="https://twitter.com"><i class="fa fa-twitter mr-3"></i></a></p>
                 </div>
                 <div class="col-lg-3 col-xs-12 links">
 
